# fullstack-starknet-rust-dioxus-example

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: auth.rs  error.rs  main.rs  model.rs  note.txt  route.rs  user.rs
src/components/: mod.rs
src/components/contracts/: mod.rs
src/components/eth/: mod.rs
src/components/home/: mod.rs
src/components/login/: mod.rs
src/components/navbar/: mod.rs
src/components/tickets/: mod.rs
src/my_starknet/contract/: mod.rs
src/server/: database.rs  mod.rs  session.rs  start.rs
src/server_config/: logging.rs  mod.rs  session.rs  start.rs
src/services/: mod.rs
src/services/eth/: mod.rs
src/services/login/: mod.rs
src/starknet/: contract.rs  mod.rs  provider.rs
src/starknet_wrapper/contract/: mod.rs
src/starknet_wrapper/provider/: mod.rs
src/views/: mod.rs
src/views/eth/: mod.rs
src/views/home/: mod.rs
src/views/navbar/: mod.rs
src/views/page_not_found/: mod.rs
src/views/tickets/: mod.rs
tests/: contract_test.rs  login_test.rs
