[package]
name = "fullstack-starknet-rust-dioxus-example"
version = "0.1.0"
authors = ["zhengpeng <847850277@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus = { version = "0.5.1", features = ["fullstack", "router"] }
# https://github.com/DioxusLabs/dioxus/issues/2343
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "v0.5", features = ["fullstack", "router"] }
serde = { version = "1.0.197", features = ["derive"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
simple_logger = "4.2.0"
tracing-wasm = "0.2.1"
tracing-subscriber = "0.3.17"
reqwest = "0.11.18"
starknet = "0.10.0"
serde_json = "1.0.120"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]


