[package]
name = "fullstack-starknet-rust-dioxus-example"
version = "0.1.0"
authors = ["zhengpeng <847850277@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
## dioxus = { version = "0.5.1", features = ["fullstack", "router"] }
## https://github.com/DioxusLabs/dioxus/issues/2343
#dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "v0.5", features = ["fullstack", "router"] }
#serde = { version = "1.0.197", features = ["derive"] }
#
## Debug
#tracing = "0.1.40"
#dioxus-logger = "0.5.0"
#simple_logger = "4.2.0"
#tracing-wasm = "0.2.1"
#tracing-subscriber = "0.3.17"
#reqwest = { version = "0.11", features = ["json"] }
#starknet = "0.10.0"
#serde_json = "1.0.120"
### if add tokio will dx serve error
## tokio = {version = "1.38.1",features = ["full","macros"] }
#axum = "0.7.5"
#axum_session = "0.14.0"
#axum_session_sqlx = "0.1.1"
#axum_session_auth = "0.14.0"
#async-trait = "0.1.81"
#sqlx = "0.7.0"
#
#[features]
#default = []
#server = ["dioxus/axum"]
#web = ["dioxus/web"]



[dependencies]

axum = { version = "0.7.5", optional = true }
axum-macros = { version = "0.4.1", optional = true }

dioxus = { version = "0.5.1", features = ["fullstack", "router"] }
dioxus-fullstack = { version = "0.5.2" }

lazy_static = { version = "1.4.0", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.120"

sqlx = { version = "0.7.0", features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
], optional = true }

tokio = { version = "1.37.0", features = ["full"], optional = true }

tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["full"], optional = true }

starknet = "0.10.0"
once_cell = "1.19.0"

tracing-wasm = "0.2.1"
tracing-subscriber = "0.3.17"

reqwest = { version = "0.11", features = ["json"] }

# Logging
log = "0.4.21"
simple_logger = { version = "4.3.3", optional = true }
tracing = "0.1.40"


[features]

default = []
server = [
    "axum", "axum-macros", "dioxus-fullstack/axum", "lazy_static", "simple_logger", "sqlx",
    "tokio", "tower-http"
]
web = [ "dioxus/web" ]